Revision history for Mojolicious::Pugin::Qooxdoo
0.5   2014-03-21
  - plugin unecessarily installed a catch all rule messing with the file not
    found handling

0.4   2014-02-14
  - mojo 4.80 does not recognize ; as query separator anymore ... fix tests

0.3   2013-11-21
  - added support for handling async callbacks

0.2   2013-11-20
  - do not index the example module

0.1   2013-11-20
  - Rewrite of MojoX::Dispatcher::Qooxdoo::Jsonrpc into a Controller centric object
