@@ -1,4 +1,7 @@
 Revision history for Mojolicious::Pugin::Qooxdoo
+
+  - improved documentation consistency
+
 0.5   2014-03-21
   - plugin unecessarily installed a catch all rule messing with the file not
     found handling
